--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,13 @@
   <div class="d-flex flex-1 justify-content-end align-items-center">
     <app-login></app-login>
     <h2 class="fs-2 text-dark" style="width: 30%; margin: 0 50px">
-      Connectez-vous pour accéder à vos tâches.
+      Connectez-vous.
     </h2>
   </div>
   <div class="vr" style="height: 100%"></div>
   <div class="d-flex flex-1 justify-content-start align-items-center">
     <h2 class="fs-2 text-dark" style="width: 30%; margin: 0 50px">
-      Inscrivez-vous pour créer vos tâches.
+      Inscrivez-vous.
     </h2>
     <app-subscribe></app-subscribe>
   </div>
