--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,15 +6,18 @@
 
   <h5 class="mb-4 text-muted">Liste des contacts</h5>
 
+  <app-add-contact></app-add-contact>
+
   <div class="row">
     <div *ngFor="let contact of contacts">
       <div class="card shadow-sm">
         <div class="card-body">
-          <h6 class="card-title text-center text-primary">{{ contact.category.category_name }}</h6>
+          <h6 class="card-title text-center text-primary">{{ contact.category?.category_name || 'Autre'}}</h6>
           <ul class="list-unstyled">
-            <li class="mb-2" *ngIf="contact.category.category_name !== 'Partenaires'">Prénom : {{ contact.title }}
+            <li class="mb-2" *ngIf="contact.category?.category_name !== 'Partenaires'">Prénom : {{ contact.title }}
             </li>
-            <li class="mb-2" *ngIf="contact.category.category_name === 'Partenaires'">Dénomination : {{ contact.title }}
+            <li class="mb-2" *ngIf="contact.category?.category_name === 'Partenaires'">Dénomination : {{ contact.title
+              }}
             </li>
             <li class="mb-2">Email : {{ contact.email }}</li>
           </ul>
