--- a/src/app/add-contact/add-contact.component.html
+++ b/src/app/add-contact/add-contact.component.html
@@ -1,27 +1,34 @@
-<div class="col-4">
-    <form [formGroup]="addContact" (ngSubmit)="onSubmit()">
-        <div>
-            <label for="title">Dénomination : </label>
-            <input type="text" id="title" placeholder="Prénom ou Dénomination du contact" formControlName="title">
+<div class="col-md-6 mx-auto">
+    <form [formGroup]="addContact" (ngSubmit)="onSubmit()"
+        class="p-4 border rounded shadow-sm bg-light d-flex flex-column">
+        <h5 class="mb-2 text-center">Ajouter un contact</h5>
+        <div class="mb-3">
+            <label for="title" class="from-label" class="form-label">Dénomination : </label>
+            <input type="text" id="title" placeholder="Prénom ou Dénomination du contact" formControlName="title"
+                class="form-control">
             <div *ngIf="addContact.get('title')?.invalid && addContact.get('title')?.touched">
                 Le prénom ou la dénomination du contact est requis.
             </div>
         </div>
-        <div>
-            <label for="email">Email : </label>
-            <input type="text" id="email" placeholder="Email du contact" formControlName="email">
+        <div class="mb-3">
+            <label for="email" class="form-label">Email : </label>
+            <input type="text" id="email" placeholder="Email du contact" formControlName="email"
+                class="form-control form-control">
             <div *ngIf="addContact.get('email')?.invalid && addContact.get('email')?.touched">
                 L'email du contact est requis.
             </div>
         </div>
-        <div>
-            <label for="category">Catégories</label>
-            <select name="category" id="category_id" formControlName="category_id">
+        <div class="mb-3">
+            <label for="category" class="form-label">Catégories</label>
+            <select name="category" id="category_id" formControlName="category_id" class="form-select w-25 text-center">
                 <option *ngFor="let category  of categories" [value]="category.id">
                     {{ category.category_name }}
                 </option>
             </select>
         </div>
-        <button type="submit" [disabled]="addContact.invalid">Ajouter</button>
+        <div class="d-grid">
+            <button type="submit" class="btn btn-success w-20 p-2 mx-auto"
+                [disabled]="addContact.invalid">Ajouter</button>
+        </div>
     </form>
 </div>
