--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,26 +1,26 @@
-<div class="container" style="width: 80%">
+<div class="container">
   <div class="d-flex justify-content-between mb-3">
     <h1>Bienvenue, {{ username }}</h1>
     <button (click)="logout()" class="btn btn-primary">Deconnexion</button>
   </div>
 
-  <h5 class="mb-4 text-muted">Liste des contacts</h5>
+  <h3 class="mb-5 text-muted text-center">Liste de vos contacts</h3>
 
   <app-add-contact></app-add-contact>
 
-  <div class="row" *ngIf="contacts.length > 0; else emptyContactList">
-    <div *ngFor="let contact of contacts">
-      <div class="card shadow-sm">
+  <div class="col-6 mt-5 mx-auto w-50" *ngIf="groupedContacts.size; else emptyContactList">
+    <div *ngFor="let groupContact of groupedContacts.entries()">
+      <div class="card shadow-sm mb-3">
         <div class="card-body">
-          <h6 class="card-title text-center text-primary">{{ contact.category?.category_name || 'Autre'}}</h6>
-          <ul class="list-unstyled">
-            <li class="mb-2" *ngIf="contact.category?.category_name !== 'Partenaires'">Prénom : {{ contact.title }}
+          <h6 class="card-title text-center text-primary">{{ groupContact[0]}}</h6>
+          <ul class="list-unstyled" *ngFor="let contact of groupContact[1]; let lastContact = last"
+            [ngStyle]="{'border-bottom': lastContact ? 'none' : '1px solid #ddd'}">
+            <li class="mb-2" class="py-2">
+              Identité: {{contact.title}}
             </li>
-            <li class="mb-2" *ngIf="contact.category?.category_name === 'Partenaires'">Dénomination : {{
-              contact.title
-              }}
+            <li class="mb-2" class="py-2 mb-3">
+              Email: {{contact.email}}
             </li>
-            <li class="mb-2">Email : {{ contact.email }}</li>
           </ul>
         </div>
       </div>
