add a change requested by the pull request

--- a/src/app/components/add-contact/add-contact.component.html
+++ b/src/app/components/add-contact/add-contact.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="mb-3">
             <label for="category" class="form-label">Catégories</label>
-            <select name="category" id="category_id" formControlName="category_id" class="form-select w-25 text-center">
+            <select name="category" id="category_Id" formControlName="category_Id" class="form-select w-25 text-center">
                 <option *ngFor="let category  of categories" [value]="category.id">
                     {{ category.category_name }}
                 </option>
