add form contact for send email contact

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,6 +31,7 @@
           <button class="btn btn-danger" [appDeleteContact]="contact.id" (contactDeleted)="onContactDeleted()">
             Supprimer
           </button>
+          <button class="btn btn-success m-3" (click)="navigateToContact(contact.id)">Contacter</button>
         </td>
       </tr>
     </tbody>
