add button component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -52,5 +52,5 @@
     </div>
   </div>
   <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
-  <button type="submit" class="btn btn-primary w-100">Connexion</button>
+  <app-button type="submit" label="Connexion" class="btn btn-primary w-100"></app-button>
 </form>
