--- a/src/app/components/subscribe/subscribe.component.html
+++ b/src/app/components/subscribe/subscribe.component.html
@@ -130,5 +130,5 @@
   </div>
 
   <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
-  <button type="submit" class="btn btn-primary w-100">S'inscrire</button>
+  <app-button type="submit" label="S'inscrire" class="btn btn-primary w-100"></app-button>
 </form>
